[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://sound/Jump3.wav" type="AudioStream" id=2]
[ext_resource path="res://Art/player.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.9565, 32.0836 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 31.9405, 32.1394 )

[node name="player" type="RigidBody2D" index="0"]

position = Vector2( 615.15, 437.44 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 2
mass = 1.5
friction = 1.0
bounce = 0.0
gravity_scale = 1.5
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="jump_sound" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -25.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="player_sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

visible = false
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 2 )

[node name="wait_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="timeout" from="wait_timer" to="." method="_on_wait_timer_timeout"]


